--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -4,6 +4,7 @@
 body {
   margin: 0px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: #ebe1ef;
 }
 
 .hover:hover{
